--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<meta name="google-adsense-account" content="ca-pub-9536463099138128">
   <title>JOSHVA</title>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9536463099138128"
+     crossorigin="anonymous"></script>
 
   <!-- Favicons -->
   <link href="assets/img/WhatsApp Image 2022-11-28 at 9.45.17 PM.jpeg" rel="icon">
