--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@
 </head>
 
 <body>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9536463099138128"
+     crossorigin="anonymous"></script>
+<!-- gg -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9536463099138128"
+     data-ad-slot="9657723238"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
