--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
 
     </div>
   </header>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9536463099138128"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-9536463099138128"
+     data-ad-slot="3367647056"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <section id="hero" class="d-flex align-items-center" >
 
     <div class="container">
